# osu-preview

./: .eslintrc  .gitignore  default.nix  flake.nix  package-lock.json  package.json
backend/: Cargo.toml  default.nix  rustfmt.toml
backend/shaders/: sprite.fsh  sprite.vsh
backend/src/: errors.rs  lib.rs  macros.rs  render.rs
backend/src/beatmap/: mod.rs  timing_point.rs
backend/src/render/: mod.rs
common/: constants.js
config/: webpack.base.config.js  webpack.development.config.js  webpack.production.config.js
popup/: canvas.js  index.js
popup/renderers/: mania.js  osu.js  utils.js
static/: manifest.json
